--- a/exercises/01.js-hello-world/02.problem.root/index.html
+++ b/exercises/01.js-hello-world/02.problem.root/index.html
@@ -1,15 +1,12 @@
 <html>
 	<body>
-		<!-- 💣 delete this element (we'll make it with JS instead) -->
-		<div id="root"></div>
+
 		<script type="module">
-			// 🐨 rather than getting the element from the DOM created by the HTML
-			// create the root element like you do the hello world element
-			const rootElement = document.getElementById('root')
-			// 🐨 you can even add the id to the root element if you like
 
+			const rootElement = document.createElement('div')
+			rootElement.className = 'root'
+			document.body.append(rootElement)
 			const element = document.createElement('div')
-
 			element.className = 'container'
 			element.textContent = 'Hello World'
 
