--- a/exercises/03.using-jsx/04.problem.nesting/index.html
+++ b/exercises/03.using-jsx/04.problem.nesting/index.html
@@ -4,10 +4,16 @@
 	<script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
 	<script src="https://unpkg.com/@babel/standalone@7.23.5/babel.js"></script>
 	<script type="text/babel">
-		const children = 'Hello World'
-		const className = 'container'
-		const props = { children, className }
-		const element = <div {...props} />
+		const rootElement = document.getElementById('root')
+	
+		const element = (<div class="container">
+	<p>Here's Sam's favorite food:</p>
+	<ul class="sams-food">
+		<li>Green eggs</li>
+		<li>Ham</li>
+	</ul>
+</div>)
+
 		ReactDOM.createRoot(document.getElementById('root')).render(element)
 	</script>
 </body>
