--- a/exercises/03.using-jsx/02.problem.interpolation/index.html
+++ b/exercises/03.using-jsx/02.problem.interpolation/index.html
@@ -4,7 +4,11 @@
 	<script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
 	<script src="https://unpkg.com/@babel/standalone@7.23.5/babel.js"></script>
 	<script type="text/babel">
-		const element = <div className="container">Hello World</div>
+
+const className = 'container'
+const children = 'Hello World'
+const element = <div className = {className}>{children}</div>
+
 		ReactDOM.createRoot(document.getElementById('root')).render(element)
 	</script>
 </body>
