--- a/exercises/03.using-jsx/03.problem.spread/index.html
+++ b/exercises/03.using-jsx/03.problem.spread/index.html
@@ -6,7 +6,8 @@
 	<script type="text/babel">
 		const children = 'Hello World'
 		const className = 'container'
-		const element = <div className={className}>{children}</div>
+		const props = { className, children }
+		const element = <div {...props} />
 		ReactDOM.createRoot(document.getElementById('root')).render(element)
 	</script>
 </body>
